2010-09-18    <Jim@LS-RED>

	* CPU/display-utils.c J.P. Mellor <jpmellor@rose-hulman.edu>:
	Did not display full stack (artificially dropped first 4K).
	
2010-09-12    <Jim@LS-RED>

	* QtSpim/:
	Released QtSpim.0.9

2010-09-09    <Jim@X64PC>

	* PCSpim/:
	Ported PCSpim to Visual Studio 2010.
	Renamed VS configuration files to reflect version of VS (vs6,
	vs08, vs10).
	Compiled PCSpim for x64 processor on Windows.

2010-09-06    <Jim@X64PC>

	* spim/Makefile:
	Supress coercion chatter when compiling with gcc v4.

2010-09-03    <Jim@LS-RED>

	* spim/, xspim/, CPU:
	Eliminated the Configure / configuration file. Defaults work for
	most systems these days, so ports to "unusual" systems can change
	the parameters by setting the cpp defines manually in Makefiles.

2010-08-31    <Jim@LS-RED>

	* pervasive:
	Renamed defines LITTLENDIAN -> SPIM_LITTLENDIAN, BIGENDIAN ->
	SPIM_BIGENDIAN to avoid name classes with system .h files.

2010-07-27    <Jim@LS-RED>

	* CPU/{inst.c, parser.y, run.c, scanner.l, spim-utils.c,
	sym-tbl.c, syscall.c}, spim/{Makefile, spim.c}:
	Fix type errors so spim compiles as C++.

2010-07-21    <Jim@LS-RED>

	* CPU/version.h, CPU/spim-utils.c, spim/Makefile, xspim/Makefile,
	xspim/IMakefile, PCSpim/pcspim.vcproj:
	Move spim version information from file to CPU/version.h.

2010-01-23    <Jim@LS-RED>

	* CPU/endian.c: 
	Added copyright notice.

2010-01-08    <Jim@LS-RED>

	* Version 8.0 released

2010-01-05    <Jim@LS-RED>

	* xspim/Imakefile, spim/Makefile Jaymie Strecker [JStrecker@wooster.edu]:
	Change install path from /usr to /usr/local.
	Removed -D option, which doesn't exists on MacOS.

	* pervasive:
	Change license to a BSD license, update copyright notices, and
	eliminated references to my old email address.

2009-12-05    <Jim@LS1>

	* CPU/spim-utils.c (initialize_run_stack) [이법재 bupjae@hotmail.com]:
	Simplify alignment of data on stack to ensure enough room is left
	for environment and args at top of stack.

	* PCSpim/PCSpimView.cpp: